# robust-multi-objective-decoding

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  eval.py  pyproject.toml  run_llm_eval.py  run_llm_eval.sh  run_llm_single_eval.py  run_prompt2.sh  run_single_eval.sh  run_single_eval_prompt2.py  train.py
configs/: multi_obj_default_config.yaml
configs/experiment/: gemma_2_valueprism.yaml  gemma_2_valueprism_best_of_n.yaml  gemma_2_valueprism_test.yaml  gpt2large_multimodel_hh_cdfudge.yaml  gpt2large_multimodel_ultrafeedback_4vals_cdfudge.yaml  gpt2large_multimodel_ultrafeedback_5vals_cdfudge.yaml
configs/model/: gemma_2_2b.yaml  gemma_2_2b_it_multi_head.yaml  gemma_2_2b_multi_head.yaml  gpt_2_large_multi_head.yaml  gpt_2_large_multi_model.yaml  pythia_1.4b.yaml  pythia_410m.yaml  pythia_70m.yaml  pythia_70m_multi_model.yaml
configs/ref_model/: gemma_2_2b.yaml  gemma_2_2b_it.yaml
notebooks/: GPT-4-evals.ipynb  investigate_llm_eval.ipynb  investigate_llm_single_eval.ipynb  investigate_prompt2.ipynb  llm-eval-2.ipynb
robust_multi_objective_decoding/: constants.py  losses.py  multi_objective_value_function.py  value_function_learner.py
robust_multi_objective_decoding/data/: collate_functions.py  multi_obj_collate_functions.py  multiobjective_dataset.py
robust_multi_objective_decoding/decoders/: __init__.py  best_of_n_oracle_decoder.py  best_of_n_safety_oracle_decoder.py  blockwise_robust_decoder.py  blockwise_robust_decoder2.py  decoders.py  multi_obj_controlled_decoder.py  multi_objective_decoder.py  reward_soup.py
tests/: conftest.py  test_classifier.py  test_collate_functions.py  test_dataset_balancing.py  test_dataset_builder.py  test_eval_utils.py  test_losses.py  test_model_handler.py  test_multi_obj_collate_functions.py  test_multi_objective_value_function.py  test_multi_objective_value_function_learner.py  test_oracle.py  test_qcbf_decoders.py  test_safety_datasets.py  test_utils.py  test_value_function.py  test_value_function_learner.py  test_value_function_losses.py
tests/decoder_tests/: test_best_of_n.py  (+1 more)
(+33 files in other folders)
