[project]
name = "robust-multi-objective-decoding"
version = "0.1.0"
description = "Inference time library for controlled decoding type methods"
authors = [
    {name = "williambankes", email = "williamjamesbankes@gmail.com"},
]
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "pytorch-lightning>=2.5.0.post0",
    "transformers>=4.48.0",
    "datasets>=3.2.0",
    "hydra-core>=1.3.2",
    "rich>=13.9.4",
    "peft>=0.14.0",
    "scikit-learn>=1.6.1",
    "wandb>=0.19.2",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "torch[cuda]>=2.6.0",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "private"
url = "https://download.pytorch.org/whl/cu118"
include_packages = ["torch", "torchvision", "torchaudio"]
exclude_packages = ["*"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true